@@ -39,7 +39,7 @@ proc editImportProps {key} {
 
     # create "Imports" page
     label $nb.imports.l -text  "Imported files:"
-    tableEdit $nb.imports.tbl 10 {
+    tableEdit $nb.imports.tbl 15 {
       {Name               name           {entry $e -textvariable $v -width 20 -bd 1}}
       {{End-line comment} right-comment  {entry $e -textvariable $v -width 15 -bd 1}}
       {{Doc. comment}     banner-comment {entry $e -textvariable $v -width 15 -bd 1}}
